_archive/content-services/5.1/concepts/alfresco-sdk-intro.md
---
author: Alfresco Documentation
---

# Alfresco SDK 2.2.0

This documentation covers version 2.2.0 of the Alfresco SDK. The Alfresco SDK is a Maven based development kit that provides an easy to use approach to developing applications and extensions for Alfresco.

With this SDK you can develop, package, test, run, document and release your Alfresco extension project. It is important to note that while previous versions of the Alfresco SDK were based around Ant, the latest versions of the SDK are based on Maven.

The latest version of the SDK is **Alfresco SDK 3.0**. See the [Developer guide](https://docs.alfresco.com/5.2/concepts/sdk-intro.html) for details.

For earlier releases of the Alfresco SDK, see the **Previous versions** section of [http://docs.alfresco.com](https://docs.alfresco.com).

The Alfresco SDK 2.2 includes a number of Maven archetypes. These archetypes aim to provide a standardized approach to development, release, and deployment of Alfresco extensions.

## Project documentation, website, and support

From version 2.0 and up, releases for the Alfresco SDK are available in Maven Central.

The Alfresco SDK source code is [hosted on GitHub](https://github.com/Alfresco/alfresco-sdk/).

The Alfresco SDK issue tracking is [hosted on GitHub](https://github.com/Alfresco/alfresco-sdk/issues).

The Alfresco SDK forum for support is [hosted on Alfresco Forums](http://forums.alfresco.com/forum/developer-discussions/development-environment).

-   **[What's new?](../concepts/alfresco-sdk-whats-new.md)**  
New features in the Alfresco SDK.
-   **[Introduction to the Alfresco SDK](../concepts/alfresco-sdk-introduction.md)**  
You will learn about the different Maven Archetypes that can be used to generate Alfresco extension projects.
-   **[Getting Started with the Alfresco SDK](../concepts/alfresco-sdk-getting-started.md)**  
This information gets you started with the Alfresco SDK. The Alfresco SDK itself does not need to be installed \(as it is based around Maven\), but there are some prerequisites that will need to be made available.
-   **[Maven Archetypes - Command Reference](../concepts/alfresco-sdk-cmd-reference.md)**  
There are three Maven archetypes on which the Alfresco SDK can base the generation of projects. This information provides the Maven command reference for these projects.
-   **[Rapid Application Development \(RAD\)](../concepts/alfresco-sdk-rad.md)**  
These tutorials cover how to employ the RAD features of the Alfresco SDK.
-   **[Advanced Topics](../concepts/alfresco-sdk-advanced-topics.md)**  
This information provides more advanced topics that you might come in contact with when you have been working with an SDK project for a while. We will have a look at how you can add more custom modules to an All-in-One project, how to bring in standard Alfresco modules such as Records Management \(RM\) and SharePoint Protocol \(SPP\) support, configuring SSL, and more.
-   **[Upgrading](../concepts/alfresco-sdk-upgrading.md)**  
This information walks through how to upgrade your project to use a newer version of Alfresco. It also takes you through the process of upgrading your project to use a newer version of the SDK.
-   **[Using the REST API Explorer](../concepts/alfresco-sdk-tutorials-using-rest-api-explorer.md)**  
The Alfresco SDK comes with the Alfresco REST API Explorer web application built into the `run` profile for the All-In-One project.
-   **[Using MySQL](../concepts/alfresco-sdk-tutorials-mysql-intro.md)**  
The Alfresco SDK can be configured to use a MySQL database server rather than the default option of the H2 database engine.

**Parent topic:**[Developer guide](../concepts/dev-for-developers.md)

